{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 148,
  "lineage": "34218bdc-2d7a-e17c-646d-c0aa6a14f6c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e073c8578ef12212",
            "arn": "arn:aws:ec2:eu-north-1:670088436683:elastic-ip/eipalloc-0e073c8578ef12212",
            "domain": "vpc",
            "id": "eipalloc-0e073c8578ef12212",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-63-211-180.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.211.180",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e4c488e413a3b68",
            "arn": "arn:aws:ec2:eu-north-1:670088436683:elastic-ip/eipalloc-00e4c488e413a3b68",
            "domain": "vpc",
            "id": "eipalloc-00e4c488e413a3b68",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-13-62-193-227.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.62.193.227",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ca6af985e57ce21",
            "arn": "arn:aws:ec2:eu-north-1:670088436683:instance/i-0ae7b30a7cbff6dc5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae7b30a7cbff6dc5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f941194829e67c25"
              }
            ],
            "primary_network_interface_id": "eni-0f941194829e67c25",
            "private_dns": "ip-10-0-1-129.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.129",
            "public_dns": "ec2-51-21-253-170.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.253.170",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec4f68fab1fc5197",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053890f065b3072fd",
            "tags": {
              "Name": "techcorp-bastion"
            },
            "tags_all": {
              "Name": "techcorp-bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09da3bb07df404543"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "i-0ae7b30a7cbff6dc5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ca6af985e57ce21",
            "arn": "arn:aws:ec2:eu-north-1:670088436683:instance/i-02f1424d4af1aaf49",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f1424d4af1aaf49",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a1774ca651510a7b"
              }
            ],
            "primary_network_interface_id": "eni-0a1774ca651510a7b",
            "private_dns": "ip-10-0-3-164.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.164",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0971dea3351cb4c2c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4c0e0be24728424",
            "tags": {
              "Name": "techcorp-db"
            },
            "tags_all": {
              "Name": "techcorp-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03ce77380ac1e3ec5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "i-02f1424d4af1aaf49",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.db_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ca6af985e57ce21",
            "arn": "arn:aws:ec2:eu-north-1:670088436683:instance/i-0cb2f80d4221885f1",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cb2f80d4221885f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01103a9dd8b56cbcd"
              }
            ],
            "primary_network_interface_id": "eni-01103a9dd8b56cbcd",
            "private_dns": "ip-10-0-3-8.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.8",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03188bab19d7449c2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4c0e0be24728424",
            "tags": {
              "Name": "techcorp-web-1"
            },
            "tags_all": {
              "Name": "techcorp-web-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6adc3768be853e7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "i-0cb2f80d4221885f1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ca6af985e57ce21",
            "arn": "arn:aws:ec2:eu-north-1:670088436683:instance/i-0ae3cf01adae70f77",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae3cf01adae70f77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00cd985365346f7fa"
              }
            ],
            "primary_network_interface_id": "eni-00cd985365346f7fa",
            "private_dns": "ip-10-0-4-55.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.55",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01baeb3079d61fc82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08eeb7edb97055d25",
            "tags": {
              "Name": "techcorp-web-2"
            },
            "tags_all": {
              "Name": "techcorp-web-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b6adc3768be853e7"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "i-0ae3cf01adae70f77",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techcorp_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:internet-gateway/igw-04965a55e9b30d6dc",
            "id": "igw-04965a55e9b30d6dc",
            "owner_id": "670088436683",
            "region": "eu-north-1",
            "tags": {
              "Name": "techcorp-igw"
            },
            "tags_all": {
              "Name": "techcorp-igw"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "techcorp_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:loadbalancer/app/techcorp-alb/caa085dbf6907fe3",
            "arn_suffix": "app/techcorp-alb/caa085dbf6907fe3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "techcorp-alb-838413951.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:loadbalancer/app/techcorp-alb/caa085dbf6907fe3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "techcorp-alb",
            "preserve_host_header": false,
            "region": "eu-north-1",
            "security_groups": [
              "sg-0d2cef2c77ff59870"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00fb604b5cd8e6662"
              },
              {
                "subnet_id": "subnet-053890f065b3072fd"
              }
            ],
            "subnets": [
              "subnet-00fb604b5cd8e6662",
              "subnet-053890f065b3072fd"
            ],
            "tags": {
              "Name": "techcorp-alb"
            },
            "tags_all": {
              "Name": "techcorp-alb"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:loadbalancer/app/techcorp-alb/caa085dbf6907fe3"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:listener/app/techcorp-alb/caa085dbf6907fe3/5a9d0532b7c95838",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:listener/app/techcorp-alb/caa085dbf6907fe3/5a9d0532b7c95838",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:loadbalancer/app/techcorp-alb/caa085dbf6907fe3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-north-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:listener/app/techcorp-alb/caa085dbf6907fe3/5a9d0532b7c95838"
          },
          "dependencies": [
            "aws_lb.techcorp_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
            "arn_suffix": "targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "techcorp-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-north-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "techcorp-web-tg"
            },
            "tags_all": {
              "Name": "techcorp-web-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_1_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d,i-0cb2f80d4221885f1,80",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
            "target_id": "i-0cb2f80d4221885f1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
            "target_id": "i-0cb2f80d4221885f1"
          },
          "dependencies": [
            "aws_instance.web_1",
            "aws_lb_target_group.web_tg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet_1",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d,i-0ae3cf01adae70f77,80",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
            "target_id": "i-0ae3cf01adae70f77"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "port": 80,
            "region": "eu-north-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:670088436683:targetgroup/techcorp-web-tg/a1ae7466ad5bd85d",
            "target_id": "i-0ae3cf01adae70f77"
          },
          "dependencies": [
            "aws_instance.web_2",
            "aws_lb_target_group.web_tg",
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnet_2",
            "aws_vpc.techcorp_vpc",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "techcorp_nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e073c8578ef12212",
            "association_id": "eipassoc-027fc8861f9d6f900",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-081c7a488b6f36f9a",
            "network_interface_id": "eni-0266e5313cabe5b18",
            "private_ip": "10.0.1.53",
            "public_ip": "13.63.211.180",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-053890f065b3072fd",
            "tags": {
              "Name": "techcorp-nat-1"
            },
            "tags_all": {
              "Name": "techcorp-nat-1"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.techcorp_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "techcorp_nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e4c488e413a3b68",
            "association_id": "eipassoc-0041077c64044b834",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-05f4cb06819a38d08",
            "network_interface_id": "eni-0165086ae0ead472d",
            "private_ip": "10.0.2.229",
            "public_ip": "13.62.193.227",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00fb604b5cd8e6662",
            "tags": {
              "Name": "techcorp-nat-2"
            },
            "tags_all": {
              "Name": "techcorp-nat-2"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.techcorp_igw",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:route-table/rtb-0274f5f0f4142c506",
            "id": "rtb-0274f5f0f4142c506",
            "owner_id": "670088436683",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-081c7a488b6f36f9a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-1"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "rtb-0274f5f0f4142c506",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.techcorp_igw",
            "aws_nat_gateway.techcorp_nat_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:route-table/rtb-0c81ff8445d799d5a",
            "id": "rtb-0c81ff8445d799d5a",
            "owner_id": "670088436683",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05f4cb06819a38d08",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-private-rt-2"
            },
            "tags_all": {
              "Name": "techcorp-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "rtb-0c81ff8445d799d5a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.techcorp_igw",
            "aws_nat_gateway.techcorp_nat_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:route-table/rtb-0d8d5bb004dc80e08",
            "id": "rtb-0d8d5bb004dc80e08",
            "owner_id": "670088436683",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04965a55e9b30d6dc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "techcorp-public-rt"
            },
            "tags_all": {
              "Name": "techcorp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "rtb-0d8d5bb004dc80e08",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9180d5424eb8ac8",
            "region": "eu-north-1",
            "route_table_id": "rtb-0274f5f0f4142c506",
            "subnet_id": "subnet-0f4c0e0be24728424"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_internet_gateway.techcorp_igw",
            "aws_nat_gateway.techcorp_nat_1",
            "aws_route_table.private_rt_1",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025a4dcb1c3058f80",
            "region": "eu-north-1",
            "route_table_id": "rtb-0c81ff8445d799d5a",
            "subnet_id": "subnet-08eeb7edb97055d25"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_internet_gateway.techcorp_igw",
            "aws_nat_gateway.techcorp_nat_2",
            "aws_route_table.private_rt_2",
            "aws_subnet.private_subnet_2",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c78a5d815ae805f1",
            "region": "eu-north-1",
            "route_table_id": "rtb-0d8d5bb004dc80e08",
            "subnet_id": "subnet-053890f065b3072fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_1",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03aefb38071e49249",
            "region": "eu-north-1",
            "route_table_id": "rtb-0d8d5bb004dc80e08",
            "subnet_id": "subnet-00fb604b5cd8e6662"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techcorp_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet_2",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:security-group/sg-0d2cef2c77ff59870",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d2cef2c77ff59870",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "670088436683",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "sg-0d2cef2c77ff59870",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:security-group/sg-09da3bb07df404543",
            "description": "Allow SSH from my IP only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09da3bb07df404543",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.211.59.107/32"
                ],
                "description": "SSH from my IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "670088436683",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "sg-09da3bb07df404543",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:security-group/sg-03ce77380ac1e3ec5",
            "description": "Allow Postgres from Web only + SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ce77380ac1e3ec5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from Web",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6adc3768be853e7"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09da3bb07df404543"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "670088436683",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "sg-03ce77380ac1e3ec5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.web_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:security-group/sg-0b6adc3768be853e7",
            "description": "Allow HTTP from ALB and SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6adc3768be853e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere (via ALB)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09da3bb07df404543"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "670088436683",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "sg-0b6adc3768be853e7",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:subnet/subnet-0f4c0e0be24728424",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4c0e0be24728424",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670088436683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "techcorp-private-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-1"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "subnet-0f4c0e0be24728424",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:subnet/subnet-08eeb7edb97055d25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eeb7edb97055d25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "670088436683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "techcorp-private-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-private-subnet-2"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "subnet-08eeb7edb97055d25",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:subnet/subnet-053890f065b3072fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053890f065b3072fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670088436683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "techcorp-public-subnet-1"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-1"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "subnet-053890f065b3072fd",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:subnet/subnet-00fb604b5cd8e6662",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00fb604b5cd8e6662",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "670088436683",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "techcorp-public-subnet-2"
            },
            "tags_all": {
              "Name": "techcorp-public-subnet-2"
            },
            "vpc_id": "vpc-06f4a977d73ccd5a1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "subnet-00fb604b5cd8e6662",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.techcorp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techcorp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:670088436683:vpc/vpc-06f4a977d73ccd5a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-087d57bcb72dba343",
            "default_route_table_id": "rtb-0fd8bc61bc5dc0783",
            "default_security_group_id": "sg-07f1b1af5e0babd78",
            "dhcp_options_id": "dopt-0e891f96cab91ad4f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f4a977d73ccd5a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd8bc61bc5dc0783",
            "owner_id": "670088436683",
            "region": "eu-north-1",
            "tags": {
              "Name": "techcorp-vpc"
            },
            "tags_all": {
              "Name": "techcorp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "670088436683",
            "id": "vpc-06f4a977d73ccd5a1",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}